# emg-ros2

./: .gitattributes  README.md  docker-compose.yml
biogap-ros2/: Dockerfile  README.md  biogap.py  biowolf.py  entrypoint.sh
biogap-ros2/biogap-ros2/: biogap.py  biowolf.py  entrypoint.sh
biogap-ros2/biogap-ros2/ros2_ws/src/biogap_wrapper/: setup.py
biogap-ros2/ros2_ws/src/biogap_messages/: CMakeLists.txt  package.xml
biogap-ros2/ros2_ws/src/biogap_messages/msg/: EMG.msg
biogap-ros2/ros2_ws/src/biogap_wrapper/: package.xml  setup.cfg  setup.py
biogap-ros2/ros2_ws/src/biogap_wrapper/biogap_wrapper/: __init__.py  dumper.py  streamer.py
biowolf16-ros2/: Dockerfile  README.md  interface_biowolf16_ros2.py
biowolf16-ros2/biowolf16-ros2/: biowolf16.py  entrypoint.sh
biowolf16-ros2/biowolf16-ros2/ros2_ws/src/biowolf16_messages/: CMakeLists.txt  package.xml
biowolf16-ros2/biowolf16-ros2/ros2_ws/src/biowolf16_wrapper/: package.xml  setup.cfg  setup.py
gapwatch-ros1/: Dockerfile  README.md  ble.html  interface_gapwatch_ros1.py
gapwatch-ros1/gapwatch-ros1/: entrypoint.sh
gapwatch-ros1/gapwatch-ros1/ros1_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
gapwatch-ros1/gapwatch-ros1/ros1_ws/src/gapwatch_logger/: CMakeLists.txt  package.xml
gapwatch-ros1/gapwatch-ros1/ros1_ws/src/gapwatch_logger/scripts/: logger.py
gapwatch-ros1/gapwatch-ros1/ros1_ws/src/gapwatch_streamer/: CMakeLists.txt  package.xml
gapwatch-ros2/: Dockerfile  README.md  interface_gapwatch_ros2.py
gapwatch-ros2/gapwatch-ros2/: entrypoint.sh  gapwatch.py
(+30 files in other folders)
