<?xml version="1.0"?>
<package format="2">
  <name>gapwatch_logger</name>
  <version>0.0.0</version>
  <description>TCP logger for BioGUI</description>

  <maintainer email="mattia.orlandi21@gmail.com">nihil21</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gapwatch_wrapper</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>gapwatch_wrapper</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>gapwatch_wrapper</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
